<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:orientation="vertical"
    tools:context="com.fileManager.fragment.FileTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:translationZ="4dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:text="@string/search_result"
            android:textColor="#fff"
            android:textSize="21sp"
            android:translationZ="4dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">
        <TextView
            android:id="@+id/no_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/file_type_not_found"
            android:visibility="invisible"
            />

        <ImageView
            android:id="@+id/loading_gif_2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_gif_2"
            android:layout_centerHorizontal="true"
            android:text="@string/loading_files"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/filename_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/id_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="10dp"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

</LinearLayout>
