<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.67" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="1" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guide_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_image"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guide_2"
                app:layout_constraintStart_toEndOf="@id/guide_1"
                app:layout_constraintTop_toTopOf="@id/layout_image">

                <FrameLayout
                    android:id="@+id/layout_video_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_shape">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_video" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_video"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/layout_music_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_shape">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_music" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_docs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guide_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_image">

                <FrameLayout
                    android:id="@+id/layout_docs_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_shape">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_docs" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doc" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_apk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guide_2"
                app:layout_constraintStart_toEndOf="@id/guide_1"
                app:layout_constraintTop_toTopOf="@id/layout_docs">

                <FrameLayout
                    android:id="@+id/layout_apk_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_shape">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_android" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apk" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_video"
                app:layout_constraintTop_toTopOf="@id/layout_apk">

                <FrameLayout
                    android:id="@+id/layout_zip_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_shape">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:srcCompat="@drawable/ic_zip" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FileCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
